# rust_dapr_nats_producer

./: .env  .gitignore  Cargo.toml  README.md
components/: nats-pubsub.yaml
src/: config.rs  handler.rs  main.rs  models.rs  nats_client.rs
