[package]
name = "rust_dapr_nats"
version = "0.1.0"
edition = "2021"
authors = ["Victor Aguayo"]
description = "Nats Producer Service"

[dependencies]
axum = "0.8.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dapr = "0.15.1"
config = "0.15.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }

